# CMake-SDL-GLEW-GLM

./: CMakeLists.txt  CMakeSettings.json
cmake/: FindSDL2.cmake
executable/: CMakeLists.txt
executable/src/: main.cpp
library1/: CMakeLists.txt
library1/include/library1/: log.h
library1/src/: log.cpp
library2/: CMakeLists.txt
library2/include/glad/: glad.h
library2/include/library2/: window.h
library2/src/: glad.c  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl_gl3.cpp  window.cpp
